# black-box

./: .gitignore  .gitlab-ci.yml  Doxyfile  LICENSE  README.md
black_box_orm/black_box_orm/: black_box_orm.py
common/include/config/: config_file_reader.hpp  config_params.hpp
common/include/utils/zyre/: zyre_interface.h  zyre_utils.h
common/src/utils/zyre/: zyre_utils.cpp
config/: data_sources.yaml  data_sources_nav.yaml  system_info_sources.yaml  test_sources.yaml
cppbb/common/include/config/: config_enums.hpp
cppbb/common/src/config/: config_enums.cpp  config_file_reader.cpp
cppbb/datalogger/: CMakeLists.txt  README.md
cppbb/datalogger/cmake/: Findczmq.cmake  Findzyre.cmake
cppbb/datalogger/include/datalogger/data_loggers/: data_logger.hpp
cppbb/datalogger/include/datalogger/data_readers/: data_reader.hpp  data_tunnel_interface.h  ethercat_reader.hpp  generic_ros_topic_listener.hpp  rostopic_reader.hpp  zyre_reader.hpp
cppbb/datalogger/include/datalogger/rostopic_listeners/: door_listener.hpp  generic_topic_listener.hpp  imu_listener.hpp  joint_state_listener.hpp  joy_listener.hpp  laserscan_listener.hpp  move_base_result_listener.hpp  odom_listener.hpp  pose_listener.hpp  pose_stamped_listener.hpp  rostopic_listener_base.hpp  rostopic_listener_factory.hpp  twist_listener.hpp  wheel_velocities_listener.hpp
cppbb/datalogger/include/soem/: ethercattype.h
cppbb/datalogger/src/: logger_main.cpp
cppbb/datalogger/src/data_loggers/: mongodb_logger.cpp
cppbb/datalogger/src/data_readers/: generic_ros_topic_listener.cpp  rostopic_reader.cpp  zmq_reader.cpp
cppbb/datalogger/src/rostopic_listeners/: door_listener.cpp  generic_topic_listener.cpp  imu_listener.cpp  joy_listener.cpp  laserscan_listener.cpp  pose_stamped_listener.cpp  rostopic_listener_base.cpp  rostopic_listener_factory.cpp  smart_wheel_data_listener.cpp  string_listener.cpp  twist_listener.cpp  wheel_velocities_listener.cpp  wrench_stamped_listener.cpp
cppbb/query_interface/: CMakeLists.txt
cppbb/query_interface/cmake/: Findlibzmq.cmake
cppbb/query_interface/include/: query_interface_factory.h  query_interface_manager.h
cppbb/query_interface/src/: ethercat_query_interface.cpp  query_interface_factory.cpp  query_interface_main.cpp  ros_query_interface.cpp  zmq_query_interface.cpp  zyre_query_interface.cpp
datalogger/: CMakeLists.txt
datalogger/include/datalogger/data_loggers/: mongodb_logger.hpp  text_logger.hpp
datalogger/include/datalogger/data_readers/: json_zmq_reader.hpp  zmq_reader.hpp
datalogger/include/datalogger/rostopic_listeners/: door_listener.hpp  path_listener.hpp  pose_with_covariance_stamped_listener.hpp  rostopic_listener_base.hpp  rostopic_listener_factory.hpp  smart_wheel_data_listener.hpp  string_listener.hpp  wheel_fault_status_listener.hpp  wrench_stamped_listener.hpp
datalogger/src/: logger_main.cpp
datalogger/src/data_loggers/: mongodb_logger.cpp  text_logger.cpp
datalogger/src/data_readers/: data_reader.cpp  data_tunnel_interface.cpp  ethercat_reader.cpp  json_zmq_reader.cpp  rostopic_reader.cpp  zyre_reader.cpp
datalogger/src/rostopic_listeners/: door_listener.cpp  generic_topic_listener.cpp  joint_state_listener.cpp  move_base_result_listener.cpp  odom_listener.cpp  path_listener.cpp  pose_listener.cpp  pose_with_covariance_stamped_listener.cpp  rostopic_listener_base.cpp  rostopic_listener_factory.cpp  smart_wheel_data_listener.cpp  wheel_fault_status_listener.cpp
docs/images/: ropod_datalogger.dia
docs/messages/: black-box-data-query-schema.json  black-box-latest-data-query-schema.json  black-box-name-query-schema.json  black-box-variable-query-schema.json
pybb/: logger_main.py  odm_main.py  query_interface_main.py  requirements.txt  setup.py
pybb/black_box/automatic_tests/: automatic_tester.py  zyre_publisher.py
pybb/black_box/config/: config_file_reader.py  config_params.py  config_utils.py
pybb/black_box/datalogger/: rostopic_listener.py
pybb/black_box/datalogger/data_readers/: event_reader.py  json_zmq_reader.py  reader_base.py  rostopic_listener.py  rostopic_reader.py  zyre_reader.py
pybb/black_box/datalogger/data_readers/event_listeners/: event_listener_base.py  rosparam_listener.py  system_info_listener.py  test_listener.py
pybb/black_box/datalogger/loggers/: logger_base.py  mongodb_logger.py
pybb/black_box/datalogger/pyre_comm/: bb_pyre_comm.py
pybb/black_box/odm/: odm.py
pybb/black_box/orm/: orm.py
pybb/black_box/query_interface/: db_interface.py  query_interface.py  query_interface_main.py
pybb/test/: test_bb.py  test_bb_logging.py  test_bb_query_interface.py  test_control_logging_zyre.py
pybb/test/automatic_tests/: automatic_tester.py  rostopic_publisher.py  topic_publisher.py  zyre_publisher.py
pybb/test/bb_test_data/: black_box_metadata.bson  black_box_metadata.metadata.json  ros_ropod_cmd_vel.bson  ros_ropod_cmd_vel.metadata.json  ros_sw_ethercat_parser_data.bson  ros_sw_ethercat_parser_data.metadata.json
query_interface/include/: ethercat_query_interface.h  query_interface_base.h  ros_query_interface.h  zmq_query_interface.h  zyre_query_interface.h
query_interface/src/: query_interface_main.cpp  query_interface_manager.cpp
